--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -33,32 +33,30 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
-    "# Download NLTK resources\n",
+    "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
     "nltk.download('punkt')\n",
-    "nltk.download('punkt_tab')  # Ensure punkt_tab is downloaded\n",
+    "nltk.download('punkt_tab')  \n",
     "\n",
-    "# Initialize lemmatizer and stopwords\n",
+    "\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "stop_words = set(stopwords.words('english'))\n",
     "\n",
-    "# Function to clean text\n",
+    "\n",
     "def clean_text(text):\n",
-    "    text = text.lower()\n",
-    "    text = re.sub(r'@\\w+', '', text)  # Remove mentions\n",
-    "    text = re.sub(r'http\\S+|www\\S+', '', text)  # Remove URLs\n",
-    "    text = re.sub(r'#\\w+', '', text)  # Remove hashtags\n",
-    "    text = text.translate(str.maketrans('', '', string.punctuation))  # Remove punctuation\n",
-    "    tokens = word_tokenize(text)\n",
-    "    tokens = [lemmatizer.lemmatize(word) for word in tokens if word not in stop_words]\n",
+    "    text = text.lower()  # Convert to lowercase\n",
+    "    text = re.sub(r'[^a-z\\s]', '', text)  # Remove all non-alphabet characters\n",
+    "    tokens = word_tokenize(text)  # Tokenization\n",
+    "    tokens = [lemmatizer.lemmatize(word) for word in tokens if word not in stop_words]  # Lemmatization & stopword removal\n",
     "    return ' '.join(tokens)\n",
     "\n",
-    "# Load the dataset\n",
     "df = pd.read_csv('example.csv')\n",
     "\n",
-    "# Apply the clean_text function to the 'text' column\n",
-    "df['cleaned_text'] = df['text'].apply(clean_text)\n"
+    "\n",
+    "df['cleaned_text'] = df['text'].apply(clean_text)\n",
+    "\n",
+    "df.to_csv('cleaned_text.csv',index= False)\n"
    ]
   },
   {
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +114,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('Data_with_bert_embeddings.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "df['sentiment_encoded'] = le.fit_transform(df['airline_sentiment'])\n",
+    "\n",
+    "\n",
+    "X_weather = df[['snowfall', 'wind_speed', 'precipitation', 'humidity', 'temperature']].values\n",
+    "X_bert = np.array(df['bert_embedding'].tolist())  \n",
+    "X_combined = np.hstack((X_weather, X_bert)) \n",
+    "\n",
+    "y = df['sentiment_encoded'].values \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.72      0.96      0.82       925\n",
+      "           1       0.61      0.26      0.37       348\n",
+      "           2       0.75      0.42      0.54       266\n",
+      "\n",
+      "    accuracy                           0.71      1539\n",
+      "   macro avg       0.69      0.55      0.58      1539\n",
+      "weighted avg       0.70      0.71      0.67      1539\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
+    "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "model_xg_Boost = XGBClassifier(n_estimators=200, learning_rate=0.05, max_depth=6, random_state=42)\n",
+    "model_xg_Boost.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "y_pred_xgboost = model_xg_Boost.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.98      0.93      1124\n",
+      "           1       0.78      0.60      0.68       196\n",
+      "           2       0.91      0.63      0.75       219\n",
+      "\n",
+      "    accuracy                           0.88      1539\n",
+      "   macro avg       0.86      0.73      0.78      1539\n",
+      "weighted avg       0.88      0.88      0.87      1539\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_pred_xgboost, y_pred))"
    ]
   },
   {
