Added proper file path

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "# 6. Extracts temporal features from the 'tweet_created' timestamp, including hour of the day, day of the week, and whether it is a weekend.\n",
     "# 7. Saves the updated DataFrame with the new features to a new CSV file for further analysis or modeling.\n",
     "\n",
-    "df = pd.read_csv('cleaned_text.csv')\n",
+    "df = pd.read_csv('Input/df_pre-processed.csv')\n",
     "\n",
     "\n",
     "df['tweet_created'] = pd.to_datetime(df['tweet_created'])\n",
