--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "# 5. Extracts temporal features from the tweet timestamp, including hour of the day, day of the week, and whether it is a weekend.\n",
     "# 6. Saves the enhanced dataset with new features for further analysis or modeling.\n",
     "\n",
-    "df = pd.read_csv('cleaned_text.csv')\n",
+    "df = pd.read_csv('Input/df_pre-processed.csv')\n",
     "\n",
     "df['tweet_created'] = pd.to_datetime(df['tweet_created'])\n",
     "\n",
